--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.4"
+    "nuxt-buefy": "^0.4.4",
+    "nuxt-vuex-localstorage": "^1.3.0"
   },
   "devDependencies": {}
 }
