--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "assembly-voting",
   "version": "1.0.0",
-  "private": true,
+  "private": true,  
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -15,5 +16,11 @@
     "nuxt-buefy": "^0.4.4",
     "nuxt-vuex-localstorage": "^1.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@vue/test-utils": "^1.1.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "vue-jest": "^3.0.4"
+  }
 }
